2005-06-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-wired-jp.el (shimbun-wired-jp-get-headers): Fix the
	order of retrieved headers.

2005-06-22  MIYOSHI Masanori  <miyoshi@meadowy.org>

	* shimbun/sb-msports-nifty.el (shimbun-get-headers): Follow the
	changes of the site.
	(shimbun-msports-nifty-content-start): Ditto.

2005-06-18  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* w3m-search.el (w3m-search-engine-alist): Search Google News in
	US by "google news-en".

2005-06-17  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* w3m-search.el (w3m-search-engine-alist): Add "google news" entry.

2005-06-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-prepare-article): Break
	long lines in the editorial group.

2005-06-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-cnn-jp.el (shimbun-get-headers): Rewrite.

2005-06-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el (shimbun-get-headers): Improve regexp.

	* shimbun/sb-cnn-jp.el (shimbun-cnn-jp-prepare-article): Enable
	displaying of photographs.

2005-06-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_PATH_EMACS): Check whether XEmacs works with the
	shy group regexp and runs call-process-region correctly.

	* w3m-perldoc.el (w3m-about-perldoc): Don't relieve buggy XEmacs
	21.5 for call-process-region.

	* w3m-xmas.el (w3m-fix-gif): Ditto.
	(w3m-initialize-graphic-icons): Ditto.

	* w3m.el (w3m-decode-encoded-contents): Ditto.
	(w3m-x-moe-decode-buffer): Ditto.
	(w3m-rendering-half-dump): Ditto.

	* w3mhack.el: Advise byte-optimize-form-code-walker to avoid the
	``...called for effect'' warnings for Emacs 21.4 as well as 21.3;
	don't relieve buggy XEmacs 21.5 for call-process-region.

2005-06-12  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-muchy.el: Removed.

2005-06-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make emacs-w3m not support the XEmacs versions older than 21.4.17
	or 21.5-b19.
